--- a/style.css
+++ b/style.css
@@ -67,15 +67,44 @@
     transform: scale(.2);
 }
 
-
+/*ex6-7-8 ***************************** */
 .ex-6-img, .ex-7-img, .ex-8-img {
     width: 500px;
 }
+.ex-6-img:hover {
+    filter: grayscale(2);
+}
+.ex-7-img {
+    transition: 3s;
+}
+.ex-7-img:hover {
+    filter: grayscale(5) blur(5px);
+}
+.ex-8-img {
+    transition: 3s;
+}
+.ex-8-img:hover {
+    filter: contrast(200%) opacity(25%);
+    border-radius: 40px;
+}
 
+/*ex9 ***************************** */
 .ex-9-img {
     margin: 50px 100px;
     width: 400px;
 }
+.ex-9-img {
+    transition: 3s;
+}
+.ex-9-img:hover {
+    filter: sepia(5) contrast(200%);
+    border-radius: 40px;
+    transform: scale(0.8);
+}
+
+
+
+
 .ex-10-icon {
     font-size: 60px;
 }
