--- a/style.css
+++ b/style.css
@@ -168,3 +168,31 @@
     width: 60px;
     height: 20px;
 }
+.ex-12-button:hover .ex-12-top-white {
+    animation: moveTopWhite 5s;
+}
+@keyframes moveTopWhite {
+    0% {
+        left: 30%;
+    }
+    50% {
+        left: 50%;
+    }
+    100% {
+        right: 30%;
+    }
+}
+.ex-12-button:hover .ex-12-bottom-white {
+    animation: moveBottomWhite 5s;
+}
+@keyframes moveBottomWhite {
+    0% {
+        left: 20%;
+    }
+    50% {
+        left: 50%;
+    }
+    100% {
+        left: 30%;
+    }
+}
